--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-
-    <nav class='container'>
+    <div class='nav'>
+    <div class='container'>
         <div class='logo'>
             <img src="./resources/images/img-tea-cozy-logo.png" alt="tea cozy logo">
         </div>
@@ -17,8 +17,8 @@
             <a href='#feat'><li>Featured Tea</li></a>
             <a href='#loc'><li>Locations</li></a>
         </ul>
-    </nav>
-      
+    </div>
+</div>  
 
 
 <div class='main' id='main'> 
@@ -69,7 +69,7 @@
 </div>
 
 <div class='loccontainer'>
-    <h3>Locations</h3>
+    <h3 id="loch3">Locations</h3>
 
 <div class='loc' id='loc'>
         <div class='address'>
