added media queries to make site responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <ul>
             <a href='#main'><li>Mission</li></a>
             <a href='#feat'><li>Featured Tea</li></a>
-            <a href='#loc'><li>Locations</li></a>
+            <a href='#loch3'><li>Locations</li></a>
         </ul>
     </div>
 </div>  
@@ -35,7 +35,6 @@
     <h4>What's Steeping at The Tea Cozy?</h4>
 </div>
 
-<div class='featured'>
 
         <div class='gallery'>
             
@@ -66,12 +65,11 @@
 
         </div>
 
-</div>
 
 <div class='loccontainer'>
-    <h3 id="loch3">Locations</h3>
+    <h2 id="loch3">Locations</h2>
 
-<div class='loc' id='loc'>
+<div class='loc'>
         <div class='address'>
             <h3>Downtown</h3>
             <p>384 West 4th St</p>
